--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   agora_rtc_engine:
   permission_handler:
+  animated_splash_screen: ^1.2.0
+  agora_uikit:
 
 
 dev_dependencies:
@@ -62,7 +64,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/agora-logo.png
+    - assets/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
